--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="file_name">File Name</string>
     <string name="status">Status</string>
     <string name="ok">Ok</string>
+    <string name="download">Download</string>
+
 </resources>
